--- a/portfolio.html
+++ b/portfolio.html
@@ -242,8 +242,19 @@
                     </li>
                 </ul>
             </div>
-        </div>
 
+            <div class="content">
+<p class="subscribe">Subscribe</p>
+<div class="subscribe-form">
+<label>E-mail</label>
+<input />
+<button class="subscribe btn" type="submit">Subscribe 
+    <svg class="subscribe-svg" aria-label="іконка телеграма" width="24" height="24> 
+        <use href="./images/icons.svg#icon-linkedin"></use>
+    </svg></button>
+            </div>
+        </div>
+    </div>
 
     </footer>
 
