--- a/portfolio.html
+++ b/portfolio.html
@@ -244,17 +244,20 @@
             </div>
 
             <div class="content">
-<p class="subscribe">Subscribe</p>
-<div class="subscribe-form">
-<label>E-mail</label>
-<input />
-<button class="subscribe btn" type="submit">Subscribe 
-    <svg class="subscribe-svg" aria-label="іконка телеграма" width="24" height="24> 
-        <use href="./images/icons.svg#icon-linkedin"></use>
-    </svg></button>
+                <p class="subscribe">Subscribe</p>
+                <form class="subscribe-form">
+                    <label class="subscribe-form-email-wrapper">E-mail
+                        <input name="user_email" type="email" placeholder="E-mail" class="subscribe-form-email" />
+                    </label>
+                    
+                    <button class="subscribe btn" type="submit">Subscribe
+                        <svg class="subscribe-svg" aria-label="іконка телеграма" width="24" height="24 > 
+                            <use href="./images/icons.svg#icon-instagramm"></use>
+                        </svg></button>
+               
+            </form>
             </div>
         </div>
-    </div>
 
     </footer>
 
