--- a/index.html
+++ b/index.html
@@ -400,15 +400,45 @@
             </div>
         </div>
 
-
+        <!-- is-hidden -->
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
         <div class="modal">
             <button type="button" class="mogal-close-btn" data-modal-close>
                 <svg class="modal-close-icon" width="8" height="8">
                     <use href="./images/icons.svg#icon-close-black"> </use>
                 </svg>
             </button>
+            <form class="contact-form">
+                <div class="contact-form-div"><span class="contact-form-text">Leave your contacts and we will call you back</span></div>
+                <label class="contact-form-field-wrapper">Name</label>
+                <input class="contact-form-input" type="text" name="user_first_name" required
+                    pattern="[a-zA-Zа-яА-ЯіІїЇґҐєЄʼ]+" />
+                    <svg class="contact-form-input-icon" width="18" height="24">
+                        <use href="./images/icons.svg#icon-send"> </use>
+                    </svg>
+                <label class="contact-form-field-wrapper">Phone</label>
+                <input class="contact-form-input" type="tel" name="user_tel" required
+                    pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx"/>
+                    <svg class="contact-form-input-icon" width="18" height="24">
+                        <use href="./images/icons.svg#icon-send"> </use>
+                    </svg>
+                <label class="contact-form-field-wrapper">Email</label>
+                <input class="contact-form-input" type="mailto" name="user_mailto" required/>
+                <svg class="contact-form-input-icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-send"> </use>
+                </svg>
+
+
+                <label class="contact-form-field-wrapper">Comment</label>
+                <textarea name="user_massege" id="" class="contact-form-massege" placeholder="Text input"></textarea>
+
+                <label class="contact-form-checkbox-wrapper"></label>
+                <input type="checkbox" class="contact-form-checkbox" name="user_policy" required >
+                <span class="checkbox-policy"> I accept the terms and conditions of the<span class="privacy-policy"> Privacy Policy</span></span>
+                    <button type="submit" class="contact-form-submit">Send</button>
+            </form>
+
         </div>
 
     </div>
