--- a/portfolio.html
+++ b/portfolio.html
@@ -209,7 +209,7 @@
                 </p>
             </div>
 
-            <div class="content">
+            <div class="content social">
                 <p class="footer-media">Social media</p>
                 <ul class="social-list list ">
                     <li class="social-list-item">
@@ -251,8 +251,8 @@
                     </label>
                     
                     <button class="subscribe btn" type="submit">Subscribe
-                        <svg class="subscribe-svg" aria-label="іконка телеграма" width="24" height="24 > 
-                            <use href="./images/icons.svg#icon-instagramm"></use>
+                        <svg class="subscribe-svg" aria-label="іконка телеграма" width="24" height="24" > 
+                            <use href="./images/icons.svg#icon-send"></use>
                         </svg></button>
                
             </form>
