--- a/index.html
+++ b/index.html
@@ -409,26 +409,40 @@
                     <use href="./images/icons.svg#icon-close-black"> </use>
                 </svg>
             </button>
+
+            <p class="modal-text">Leave your contacts and we will call you back</p>
             <form class="contact-form">
-                <div class="contact-form-div"><span class="contact-form-text">Leave your contacts and we will call you back</span></div>
-                <label class="contact-form-field-wrapper">Name</label>
-                <input class="contact-form-input" type="text" name="user_first_name" required
-                    pattern="[a-zA-Zа-яА-ЯіІїЇґҐєЄʼ]+" />
-                    <svg class="contact-form-input-icon" width="18" height="24">
-                        <use href="./images/icons.svg#icon-send"> </use>
-                    </svg>
+                <div class="contact-form-conteiner">
+                    <label class="contact-form-field-wrapper" for="user-name">Name</label>
+                    <div class="contact-form-conteiner-input">
+                    <input class="contact-form-input" id="user-name" type="text" name="user-name" required
+                        pattern="[a-zA-Zа-яА-ЯіІїЇґҐєЄʼ]+" />
+                        <svg class="contact-form-input-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-send"> </use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="contact-form-conteiner">
                 <label class="contact-form-field-wrapper">Phone</label>
+                <div class="contact-form-conteiner-input">
                 <input class="contact-form-input" type="tel" name="user_tel" required
                     pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx"/>
                     <svg class="contact-form-input-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-send"> </use>
                     </svg>
+                </div>
+            </div>
+
+            <div class="contact-form-conteiner">
                 <label class="contact-form-field-wrapper">Email</label>
+                <div class="contact-form-conteiner-input">
                 <input class="contact-form-input" type="mailto" name="user_mailto" required/>
                 <svg class="contact-form-input-icon" width="18" height="24">
                     <use href="./images/icons.svg#icon-send"> </use>
                 </svg>
-
+    </div>
+            </div>
 
                 <label class="contact-form-field-wrapper">Comment</label>
                 <textarea name="user_massege" id="" class="contact-form-massege" placeholder="Text input"></textarea>
