--- a/portfolio.html
+++ b/portfolio.html
@@ -247,7 +247,7 @@
                 <p class="subscribe">Subscribe</p>
                 <form class="subscribe-form">
                     <label class="subscribe-form-email-wrapper">E-mail
-                        <input name="user_email" type="email" placeholder="E-mail" class="subscribe-form-email" />
+                        <input name="user-email" type="email" placeholder="E-mail" class="subscribe-form-email" />
                     </label>
                     
                     <button class="subscribe btn" type="submit">Subscribe
