--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 </p>
             </div>
 
-            <div class="content">
+            <div class="content social">
                 <p class="footer-media">Social media</p>
                 <ul class="social-list list ">
                     <li class="social-list-item">
@@ -398,10 +398,26 @@
                     </li>
                 </ul>
             </div>
+
+            <div class="content">
+                <p class="subscribe">Subscribe</p>
+                <form class="subscribe-form">
+                    <label class="subscribe-form-email-wrapper">E-mail
+                        <input name="user-email" type="email" placeholder="E-mail" class="subscribe-form-email" />
+                    </label>
+                    
+                    <button class="subscribe btn" type="submit">Subscribe
+                        <svg class="subscribe-svg" aria-label="іконка телеграма" width="24" height="24" > 
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg></button>
+               
+            </form>
+            </div>
         </div>
 
-        <!-- is-hidden -->
     </footer>
+
+        <!-- is-hidden -->
     <div class="backdrop" data-modal>
         <div class="modal">
             <button type="button" class="mogal-close-btn" data-modal-close>
@@ -415,8 +431,8 @@
                 <div class="contact-form-conteiner">
                     <label class="contact-form-field-wrapper" for="user-name">Name</label>
                     <div class="contact-form-conteiner-input">
-                    <input class="contact-form-input" id="user-name" type="text" name="user-name" required
-                        pattern="[a-zA-Zа-яА-ЯіІїЇґҐєЄʼ]+" />
+                        <input class="contact-form-input" id="user-name" type="text" name="user-name" required
+                            pattern="[a-zA-Zа-яА-ЯіІїЇґҐєЄʼ]+" />
                         <svg class="contact-form-input-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-send"> </use>
                         </svg>
@@ -424,33 +440,40 @@
                 </div>
 
                 <div class="contact-form-conteiner">
-                <label class="contact-form-field-wrapper">Phone</label>
-                <div class="contact-form-conteiner-input">
-                <input class="contact-form-input" type="tel" name="user_tel" required
-                    pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx"/>
-                    <svg class="contact-form-input-icon" width="18" height="24">
-                        <use href="./images/icons.svg#icon-send"> </use>
-                    </svg>
+                    <label class="contact-form-field-wrapper">Phone</label>
+                    <div class="contact-form-conteiner-input">
+                        <input class="contact-form-input" type="tel" name="user_tel" required
+                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx" />
+                        <svg class="contact-form-input-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-send"> </use>
+                        </svg>
+                    </div>
                 </div>
-            </div>
 
-            <div class="contact-form-conteiner">
-                <label class="contact-form-field-wrapper">Email</label>
-                <div class="contact-form-conteiner-input">
-                <input class="contact-form-input" type="mailto" name="user_mailto" required/>
-                <svg class="contact-form-input-icon" width="18" height="24">
-                    <use href="./images/icons.svg#icon-send"> </use>
-                </svg>
-    </div>
-            </div>
+                <div class="contact-form-conteiner">
+                    <label class="contact-form-field-wrapper">Email</label>
+                    <div class="contact-form-conteiner-input">
+                        <input class="contact-form-input" type="mailto" name="user_mailto" required />
+                        <svg class="contact-form-input-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-send"> </use>
+                        </svg>
+                    </div>
+                </div>
 
-                <label class="contact-form-field-wrapper">Comment</label>
-                <textarea name="user_massege" id="" class="contact-form-massege" placeholder="Text input"></textarea>
+                <div class="comment-conteiner">
 
-                <label class="contact-form-checkbox-wrapper"></label>
-                <input type="checkbox" class="contact-form-checkbox" name="user_policy" required >
-                <span class="checkbox-policy"> I accept the terms and conditions of the<span class="privacy-policy"> Privacy Policy</span></span>
+                    <label class="contact-form-field-wrapper">Comment</label>
+                    <textarea name="user-comment" id="user-comment" class="contact-form-massege"
+                        placeholder="Text input"></textarea>
+                </div>
+
+                <div class="checkbox-conteiner">
+                    <input type="checkbox" class="contact-form-checkbox visually-hidden" name="user-privacy"  id="user-privacy" value="true">
+                    <label class="" for="user-privacy">I accept the terms and conditions of the</label>
+                    <span class="checkbox-policy"> I accept the terms and conditions of the<span class="privacy-policy">
+                            Privacy Policy</span></span>
                     <button type="submit" class="contact-form-submit">Send</button>
+                </div>
             </form>
 
         </div>
