--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             <div class="content">
                 <p class="subscribe">Subscribe</p>
                 <form class="subscribe-form">
-                    <label class="subscribe-form-email-wrapper">E-mail
+                    <label class="subscribe-form-email-wrapper">
                         <input name="user-email" type="email" placeholder="E-mail" class="subscribe-form-email" />
                     </label>
                     
@@ -434,7 +434,7 @@
                         <input class="contact-form-input" id="user-name" type="text" name="user-name" required
                             pattern="[a-zA-Zа-яА-ЯіІїЇґҐєЄʼ]+" />
                         <svg class="contact-form-input-icon" width="18" height="24">
-                            <use href="./images/icons.svg#icon-send"> </use>
+                            <use href="./images/icons.svg#icon-person-black"> </use>
                         </svg>
                     </div>
                 </div>
@@ -445,7 +445,7 @@
                         <input class="contact-form-input" type="tel" name="user_tel" required
                             pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx" />
                         <svg class="contact-form-input-icon" width="18" height="24">
-                            <use href="./images/icons.svg#icon-send"> </use>
+                            <use href="./images/icons.svg#icon-phone-black"> </use>
                         </svg>
                     </div>
                 </div>
@@ -455,7 +455,7 @@
                     <div class="contact-form-conteiner-input">
                         <input class="contact-form-input" type="mailto" name="user_mailto" required />
                         <svg class="contact-form-input-icon" width="18" height="24">
-                            <use href="./images/icons.svg#icon-send"> </use>
+                            <use href="./images/icons.svg#icon-vector"> </use>
                         </svg>
                     </div>
                 </div>
@@ -469,11 +469,11 @@
 
                 <div class="checkbox-conteiner">
                     <input type="checkbox" class="contact-form-checkbox visually-hidden" name="user-privacy"  id="user-privacy" value="true">
-                    <label class="" for="user-privacy">I accept the terms and conditions of the</label>
-                    <span class="checkbox-policy"> I accept the terms and conditions of the<span class="privacy-policy">
-                            Privacy Policy</span></span>
-                    <button type="submit" class="contact-form-submit">Send</button>
+                    <label class="contact-form-checkbox-wrapper" for="user-privacy">I accept the terms and conditions of the<span class="checkbox-policy">Privacy Policy</span></label>
+                
                 </div>
+
+                <button type="submit" class="contact-form-submit">Send</button>
             </form>
 
         </div>
