--- a/portfolio.html
+++ b/portfolio.html
@@ -246,14 +246,15 @@
             <div class="content">
                 <p class="subscribe">Subscribe</p>
                 <form class="subscribe-form">
-                    <label class="subscribe-form-email-wrapper">E-mail
+                    <label class="subscribe-form-email-wrapper">
                         <input name="user-email" type="email" placeholder="E-mail" class="subscribe-form-email" />
                     </label>
                     
                     <button class="subscribe btn" type="submit">Subscribe
                         <svg class="subscribe-svg" aria-label="іконка телеграма" width="24" height="24" > 
                             <use href="./images/icons.svg#icon-send"></use>
-                        </svg></button>
+                        </svg>
+                    </button>
                
             </form>
             </div>
