--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
                 </div>
 
                 <div class="contact-form-conteiner">
-                    <label class="contact-form-field-wrapper">Phone</label>
+                    <label class="contact-form-field-wrapper" for="user-phone">Phone</label>
                     <div class="contact-form-conteiner-input">
-                        <input class="contact-form-input" type="tel" name="user_tel" required
+                        <input class="contact-form-input" id="user-phone" type="tel" name="user_tel" required
                             pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx" />
                         <svg class="contact-form-input-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone-black"> </use>
@@ -451,9 +451,9 @@
                 </div>
 
                 <div class="contact-form-conteiner">
-                    <label class="contact-form-field-wrapper">Email</label>
+                    <label class="contact-form-field-wrapper" for="user-email">Email</label>
                     <div class="contact-form-conteiner-input">
-                        <input class="contact-form-input" type="mailto" name="user_mailto" required />
+                        <input class="contact-form-input" id="user-email" type="email" name="user_mailto" required />
                         <svg class="contact-form-input-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-vector"> </use>
                         </svg>
@@ -462,14 +462,18 @@
 
                 <div class="comment-conteiner">
 
-                    <label class="contact-form-field-wrapper">Comment</label>
+                    <label class="contact-form-field-wrapper" for="user-comment">Comment</label>
                     <textarea name="user-comment" id="user-comment" class="contact-form-massege"
                         placeholder="Text input"></textarea>
                 </div>
 
                 <div class="checkbox-conteiner">
                     <input type="checkbox" class="contact-form-checkbox visually-hidden" name="user-privacy"  id="user-privacy" value="true">
-                    <label class="contact-form-checkbox-wrapper" for="user-privacy">I accept the terms and conditions of the<span class="checkbox-policy">Privacy Policy</span></label>
+                    <label class="contact-form-checkbox-wrapper" for="user-privacy">I accept the terms and conditions of the
+                        <span class="checkbox-privacy-policy">
+                             <svg class="checkbox-svg"  width="10" height="8"><use href="./images/icons.svg#icon-vectorr"> </use> </svg>
+                        </span>
+                        <a class="checkbox-policy">Privacy Policy</a></label>
                 
                 </div>
 
