--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 </div>
 
                 <div class="checkbox-conteiner">
-                    <input type="checkbox" class="contact-form-checkbox visually-hidden" name="user-privacy"  id="user-privacy" value="true">
+                    <input type="checkbox" class="contact-form-checkbox visually-hidden" name="user-privacy"  id="user-privacy" value="true" required>
                     <label class="contact-form-checkbox-wrapper" for="user-privacy">I accept the terms and conditions of the
                         <span class="checkbox-privacy-policy">
                              <svg class="checkbox-svg"  width="10" height="8"><use href="./images/icons.svg#icon-vectorr"> </use> </svg>
